# nexus

./: .gitignore  Cargo.toml  README.md  rust_out
nexus-ascii/: BENCHMARKS.md  Cargo.toml  README.md
nexus-ascii/docs/: INDEX.md  api.md  nohash-feature.md  overview.md  patterns.md
nexus-ascii/examples/: _bench_utils.rs  asm_audit.rs  perf_ascii_str.rs  perf_builder.rs  perf_char.rs  perf_comparison.rs  perf_flat_string.rs  perf_flat_text.rs  perf_from_raw.rs  perf_hash.rs  perf_hashmap.rs  perf_iteration.rs  perf_nohash_vs_fx.rs  perf_raw_string.rs  perf_raw_text.rs  perf_serde.rs  perf_simd_crossover.rs  perf_string.rs  perf_string_ops.rs  perf_tail_baseline.rs  perf_text.rs  perf_transform.rs  perf_vs_ascii_crate.rs  perf_zero_pad.rs  quality_hash.rs
nexus-ascii/src/: builder.rs  char.rs  flat_string.rs  flat_text.rs  format.rs  hash.rs  lib.rs  parse.rs  raw_string.rs  raw_text.rs  simd.rs  str_ref.rs  string.rs  text.rs  text_ref.rs
nexus-async-net/: Cargo.toml  README.md
nexus-async-net/docs/: INDEX.md  atomic-client-pool.md  client-pool.md  http.md  overview.md  patterns.md  performance.md  tuning.md  websocket.md
nexus-async-net/examples/: bench_pool_throughput.rs  perf_async_ws.rs  perf_async_ws_nexus.rs  perf_ws_cycles_nexus.rs  perf_ws_cycles_tokio.rs
nexus-async-net/src/: lib.rs  maybe_tls.rs
nexus-async-net/tests/: httpbin.rs  ws_nexus_integration.rs
nexus-async-rt/: BENCHMARKS.md  Cargo.toml  README.md  build.rs
nexus-async-rt/benches/: channel.rs  executor.rs
nexus-async-rt/docs/: API_GUIDE.md  ARCHITECTURE.md  INDEX.md  UNSAFE_AND_SOUNDNESS.md  cancellation.md  channels.md  integration-with-nexus-rt.md  patterns.md  task-spawning.md  timers-and-time.md  tokio-compat.md
nexus-async-rt/src/: alloc.rs  backoff.rs  cancel.rs  context.rs  cross_wake.rs  io.rs  lib.rs  runtime.rs  shutdown.rs  task.rs  timer.rs  tokio_compat.rs  waker.rs  world_ctx.rs
nexus-async-rt/tests/: cancel_fuzz.rs  channel.rs  channel_deadlock.rs  channel_fuzz.rs  channel_latency.rs  dispatch_histo.rs  intrusive_mpsc_spike.rs  join_handle_stress.rs  miri_alloc.rs  miri_cancel.rs  miri_channel.rs  miri_cross_wake.rs  miri_task.rs  miri_waker.rs  net_tcp.rs  net_udp.rs  stress_fuzz.rs  tokio_compat.rs  vs_tokio.rs  vs_tokio_dispatch.rs
nexus-bits/: Cargo.toml  README.md
nexus-bits-derive/: Cargo.toml  README.md
nexus-bits-derive/src/: lib.rs
nexus-bits/docs/: INDEX.md  builder-pattern.md  caveats.md  derive-macro.md  enum-variants.md  overview.md  patterns.md  runtime-bitfield.md  signed-fields.md
nexus-bits/src/: field.rs  int_enum.rs
nexus-bits/tests/: derive_enum.rs  derive_struct.rs  field_elision.rs  int_enum.rs  tests.rs
nexus-channel/: BENCHMARKS.md  Cargo.toml  README.md
nexus-channel/benches/: perf_channel.rs  perf_channel_latency.rs  perf_crossbeam_channel_latency.rs  profile_channel.rs  profile_crossbeam_channel.rs
nexus-channel/docs/: INDEX.md  api.md  backoff.md  overview.md  patterns.md
nexus-channel/src/: lib.rs  mpsc.rs  spsc.rs
nexus-collections/: BENCHMARKS.md  Cargo.toml  README.md
nexus-collections/docs/: ARCHITECTURE.md  INDEX.md  UNSAFE_AND_SOUNDNESS.md  btree.md  heap.md  list.md  list_workflows.md  macros.md  overview.md  rbtree.md
nexus-collections/examples/: perf_batched.rs  perf_btree.rs  perf_codegen.rs  perf_heap_cycles.rs  perf_list_cycles.rs  perf_push_hist.rs  perf_push_stat.rs  perf_rbtree.rs  perf_skiplist.rs  perf_skiplist_cycles.rs  perf_skiplist_cycles.rs.disabled  perf_std_btreemap.rs
nexus-collections/src/: btree.rs  compare.rs  exclusive.rs  heap.rs  key.rs  lib.rs  list.rs  macros.rs  rbtree.rs  skiplist.rs  storage.rs
nexus-collections/tests/: btree_test.rs  compare_test.rs  compile_fail.rs  cursor_test.rs  heap_test.rs  list_macro_test.rs  list_test.rs  miri_tests.rs  rbtree_test.rs  skiplist_test.rs
nexus-decimal/: BENCHMARKS.md  Cargo.toml  README.md
nexus-decimal/benches/: arithmetic.rs  comparison.rs  parsing.rs
nexus-decimal/docs/: INDEX.md  arithmetic.md  caveats.md  comparison.md  conversion.md  financial.md  overview.md  parsing.md  patterns.md  types.md
nexus-decimal/src/: arithmetic.rs  backing.rs  bytes.rs  constants.rs  convert.rs  decimal.rs  div_by_scale.rs  error.rs  financial.rs  format.rs  lib.rs  num_traits_impl.rs  ops.rs  pow10.rs  reciprocal.rs  rounding.rs  serde_impl.rs  wide.rs
nexus-decimal/tests/: arithmetic.rs  financial.rs  mul_div.rs  parsing.rs  phase1.rs  phase2.rs  regression.rs
nexus-id/: BENCHMARKS.md  Cargo.toml  README.md
nexus-id/docs/: INDEX.md  mixed-id.md  overview.md  patterns.md  snowflake.md  string-ids.md  uuids.md
nexus-id/examples/: perf_benchmark.rs  perf_id_hashing.rs  perf_snowflake.rs
nexus-id/src/: bytes_impl.rs  encode.rs  lib.rs  parse.rs  prng.rs  serde_impl.rs  simd.rs  snowflake.rs  snowflake_id.rs  typeid.rs  types.rs  ulid.rs  uuid_impl.rs
nexus-id/tests/: lifecycle.rs
nexus-logbuf/: BENCHMARKS.md  Cargo.toml  README.md
nexus-logbuf/docs/: INDEX.md  caveats.md  channels.md  claim-api.md  consumer-zeroing.md  mpsc.md  overview.md  patterns.md  spsc.md
nexus-logbuf/examples/: perf_mpsc_latency.rs  perf_spsc_latency.rs  throughput_bench.rs
nexus-logbuf/src/: lib.rs  mpsc.rs  spsc.rs
nexus-logbuf/tests/: miri_tests.rs
nexus-net/: BENCHMARKS.md  Cargo.toml  README.md
nexus-net/benches/: frame_reader.rs  frame_writer.rs  rest.rs
nexus-net/docs/: INDEX.md  buffers.md  errors.md  http.md  overview.md  patterns.md  performance.md  tls.md  websocket.md
nexus-notify/: BENCHMARKS.md  Cargo.toml  README.md
nexus-pool/: BENCHMARKS.md  Cargo.toml  README.md
nexus-queue/: BENCHMARKS.md  Cargo.toml  README.md
nexus-rate/: Cargo.toml  README.md
nexus-rt/: BENCHMARKS.md  Cargo.toml  README.md
nexus-rt-derive/: Cargo.toml  README.md
nexus-slab/: BENCHMARKS.md  Cargo.toml  README.md
nexus-smartptr/: Cargo.toml  README.md  build.rs
nexus-stats/: Cargo.toml  README.md
nexus-stats-control/: Cargo.toml  README.md
nexus-stats-smoothing/: Cargo.toml  README.md
nexus-timer/: Cargo.toml  README.md
(+794 files in other folders)
