[workspace]
resolver = "2"
members = [
	"nexus-bits",
	"nexus-bits-derive",
	"nexus-channel",
	"nexus-collections",
	"nexus-id",
	"nexus-pool",
	"nexus-queue",
	"nexus-slab",
	"nexus-slot",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Abso1ut3Zer0/nexus"
keywords = ["lock-free", "concurrent", "data-structures", "trading"]
categories = ["concurrency", "data-structures"]

[workspace.dependencies]
crossbeam-utils = "0.8.21"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
