[package]
name = "nexus-ascii"
version = "1.2.0"
description = "Fixed-capacity ASCII strings for high-performance systems"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = []
nohash = ["dep:nohash-hasher", "std"]
serde = ["dep:serde"]
bytes = ["dep:bytes", "std"]

[dependencies]
nohash-hasher = { version = "0.2.0", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
bytes = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
