[package]
name = "nexus-async-rt"
version = "0.1.0"
description = "Single-threaded async executor with pre-allocated task storage"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
libc = "0.2"
mio = { version = "1", features = ["os-poll", "net"] }
nexus-rt = { version = "2.0.0", path = "../nexus-rt" }
slab = "0.4"
nexus-slab = { version = "2.2.0", path = "../nexus-slab" }
nexus-timer = { version = "1.4.0", path = "../nexus-timer" }
signal-hook = "0.3"
socket2 = { version = "0.5", features = ["all"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "macros"] }

[[bench]]
name = "executor"
harness = false

[lints]
workspace = true
