[package]
name = "nexus-bits-derive"
version = "0.4.0"
description = "Derive macros for nexus-bits. Use nexus-bits instead of depending on this directly."
keywords = ["bitfield", "packed", "derive", "macro"]
categories = ["no-std", "data-structures"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[lints]
workspace = true
