[package]
name = "nexus-bits"
version = "0.4.1"
description = "Bit field packing for integer IDs"
keywords = ["bitfield", "packed", "no-std", "low-latency"]
categories = ["no-std", "data-structures"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["derive"]
derive = ["dep:nexus-bits-derive"]

[dependencies]
nexus-bits-derive = { version = "0.4", path = "../nexus-bits-derive", optional = true }

