[package]
name = "nexus-channel"
version = "1.2.1"
description = "High-performance lock-free SPSC channel for low-latency systems"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["spsc", "channel", "lock-free", "low-latency"]
categories = ["concurrency", "data-structures"]

[dependencies]
nexus-queue = { version = "1.2", path = "../nexus-queue" }
crossbeam-utils.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-channel = "0.5"
hdrhistogram = "7.5"
rtrb = "0.3"

[lints]
workspace = true

[[bench]]
name = "perf_channel"
harness = false

[[bench]]
name = "perf_channel_latency"
harness = false

[[bench]]
name = "perf_crossbeam_channel"
harness = false

[[bench]]
name = "perf_crossbeam_channel_latency"
harness = false

[[bench]]
name = "profile_channel"
harness = false

[[bench]]
name = "profile_crossbeam_channel"
harness = false
