[package]
name = "nexus-collections"
version = "0.8.2"
description = "SLUB allocator backed intrusive collections for low-latency systems"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["collections", "intrusive", "slab", "low-latency", "pre-allocated"]
categories = ["data-structures"]

[dev-dependencies]
hdrhistogram = "7.5"
rand = "0.9.2"
seq-macro.workspace = true
serial_test = "3"
trybuild = "1.0"

[dependencies]
rand_core = "0.9.3"
nexus-slab = "0.11.1"

[lints]
workspace = true
