[package]
name = "nexus-collections"
version = "1.0.0"
description = "Slab-backed intrusive collections for low-latency systems"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["collections", "intrusive", "slab", "low-latency", "pre-allocated"]
categories = ["data-structures"]

[dev-dependencies]
hdrhistogram = "7.5"
rand = "0.9.2"
seq-macro.workspace = true
serial_test = "3"

[dependencies]
nexus-slab = { version = "2.0", path = "../nexus-slab", features = ["rc"] }

[lints]
workspace = true
