[package]
name = "nexus-collections"
version = "1.1.2"
description = "Slab-backed intrusive collections for low-latency systems"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["collections", "intrusive", "slab", "low-latency", "pre-allocated"]
categories = ["data-structures"]

[dev-dependencies]
hdrhistogram = "7.5"
rand = "0.9.2"
seq-macro.workspace = true

[dependencies]
nexus-slab = { version = "2.3.2", path = "../nexus-slab", features = ["rc"] }

[lints]
workspace = true
