[package]
name = "nexus-id"
version = "0.1.0"
description = "High-performance id generators for low latency systems"
# readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dev-dependencies]
hdrhistogram = "7.5"
rustc-hash = "2"
ahash = "0.8"

[[example]]
name = "perf_snowflake"
harness = false

[[example]]
name = "perf_id_hashing"
harness = false

