[package]
name = "nexus-logbuf"
version = "0.1.0"
description = "High-performance lock-free SPSC ring buffer for low-latency systems"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["spsc", "mpsc", "ring-buffer", "queue", "lock-free"]
categories = ["concurrency", "data-structures", "no-std"]

[dependencies]
crossbeam-utils.workspace = true

[dev-dependencies]
hdrhistogram = "7.5"
rand = "0.8"

[[example]]
name = "perf_spsc_latency"

[[example]]
name = "perf_mpsc_latency"

[[example]]
name = "throughput_bench"

