[package]
name = "nexus-net"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
httparse = "1"
sha1 = "0.10"

[[example]]
name = "perf_buf"

[[example]]
name = "perf_ws"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "frame_reader"
harness = false

[[bench]]
name = "frame_writer"
harness = false

[lints]
workspace = true
