[package]
name = "nexus-notify"
version = "1.0.1"
description = "Cross-thread event queue with conflation and FIFO delivery"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
nexus-queue = { version = "1.2.0", path = "../nexus-queue" }
crossbeam-utils.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "event_queue"
harness = false

[lints]
workspace = true
