[package]
name = "nexus-pool"
version = "0.1.0"
description = "High-performance object pools for low latency systems"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dev-dependencies]
hdrhistogram = "7.5"

[[example]]
name = "perf_local_pool"
harness = false

[[example]]
name = "perf_sync_pool"
harness = false

