[package]
name = "nexus-queue"
version = "1.3.1"
description = "High-performance lock-free SPSC and MPSC queues for low-latency systems"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["spsc", "mpsc", "ring-buffer", "queue", "lock-free"]
categories = ["concurrency", "data-structures", "no-std"]

[dependencies]
crossbeam-utils.workspace = true

[dev-dependencies]
crossbeam-queue = "0.3"
hdrhistogram = "7.5"
rtrb = "0.3"

[lints]
workspace = true

[[example]]
name = "bench_spsc"

[[example]]
name = "bench_rtrb"

[[example]]
name = "bench_crossbeam"

[[example]]
name = "bench_mpsc"

[[example]]
name = "bench_mpsc_pingpong"

[[example]]
name = "bench_spmc"
