[package]
name = "nexus-rate"
version = "2.1.0"
description = "Rate limiting and flow control primitives for real-time systems"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[[example]]
name = "perf_rate"

[lints]
workspace = true
