[package]
name = "nexus-rt-derive"
version = "1.2.0"
description = "Derive macros for nexus-rt. Use nexus-rt instead of depending on this directly."
readme = "README.md"
keywords = ["derive", "macro", "resource", "ecs"]
categories = ["no-std", "data-structures"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["derive", "visit-mut", "full", "extra-traits"] }

[lints]
workspace = true
