[package]
name = "nexus-slab"
version = "0.11.0"
description = "A high-performance slab allocator optimized for predictable tail latency"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dev-dependencies]
hdrhistogram = "7.5"
proptest = "1.4"
slab = "0.4"

[lints]
workspace = true

[[example]]
name = "perf_insert_cycles"
harness = false

[[example]]
name = "perf_get_cycles"
harness = false

[[example]]
name = "perf_churn_cycles"
harness = false

[[example]]
name = "perf_indexing_cycles"
harness = false

[[example]]
name = "perf_access_methods"
harness = false

[[example]]
name = "perf_full_distribution"
harness = false
