[package]
name = "nexus-slab"
version = "2.3.3"
description = "A high-performance slab allocator optimized for predictable tail latency"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
std = ["alloc"]
alloc = []
rc = []

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
hdrhistogram.workspace = true
proptest = "1.4"
seq-macro.workspace = true
slab = "0.4"

[lints]
workspace = true

[[example]]
name = "perf_full_distribution"
harness = false
