[package]
name = "nexus-stats-control"
version = "0.1.0"
description = "Advanced control and frequency primitives for nexus-stats"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
std = ["nexus-stats-core/std", "alloc"]
alloc = ["nexus-stats-core/alloc"]
libm = ["nexus-stats-core/libm"]

[dependencies]
nexus-stats-core = { path = "../nexus-stats-core", default-features = false }

[lints]
workspace = true
