[package]
name = "nexus-stats"
version = "0.1.0"
description = "Fixed-memory, zero-allocation streaming statistics for real-time systems"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
libm = { version = "0.2", optional = true }

[lints]
workspace = true
