[package]
name = "nexus-stats"
version = "2.0.0"
description = "Fixed-memory, zero-allocation streaming statistics for real-time systems"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
libm = { version = "0.2", optional = true }

[[example]]
name = "perf_stats"
required-features = ["alloc"]

[[example]]
name = "basic"
required-features = ["std"]

[lints]
workspace = true
