[package]
name = "nexus-stats"
version = "3.0.0"
description = "Fixed-memory, zero-allocation streaming statistics for real-time systems"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
libm = { version = "0.2", optional = true }

[[example]]
name = "perf_stats"
required-features = ["std"]

[[example]]
name = "basic"
required-features = ["std"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "update_bench"
harness = false

[lints]
workspace = true
