[package]
name = "nexus-timer"
version = "1.3.2"
description = "High-performance timer wheel with O(1) insert and cancel"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Abso1ut3Zer0/nexus"
keywords = ["timer", "timer-wheel", "low-latency", "event-driven"]
categories = ["data-structures"]

[dependencies]
nexus-slab = { version = "2", path = "../nexus-slab" }

[dev-dependencies]
proptest = "1.4"
seq-macro = "0.3"

[[example]]
name = "perf_timer"
harness = false
